fix(all)green made darker for contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ p {
 Set colour theme in BG, full page width, set fixed height of 100px, reasonable height on
 all formats set to flex row and no left side margin*/
 header {
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     width: 100%;
     height: 100px;
     display: flex;
@@ -129,7 +129,7 @@ header {
 minimum width to match logo */
 header>a {
     height: 100px;
-    width: 200px;
+    width: 100px;
 }
 
 /* Logo style - Get width from parent ("a" tag) 0 margin within its container (header) 
@@ -137,11 +137,11 @@ setting again the min height/width to match the parent and to not let the image 
 smaller, to the point it cannot be seen. Which it will without this setting */
 .header-logo {
     height: 100px;
-    width: 200px;
-    margin-left: 0;
+    width: 100px;
+    margin-left: 50px;
     min-height: 100px;
-    min-width: 200px;
-    background-color: #2D8A60;
+    min-width: 100px;
+    background-color: #1D5D40;
 }
 
 /*Styling the header menu  Width of 85% (remainder in header after logo takes 15%) 
@@ -153,7 +153,7 @@ the page from the end of the row. Use align-items:center to align it vertically*
     height: 100px;
     font-size: 150%;
     height: inherit;
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     color: #FFFFFF;
     text-shadow: 0px 1px 5px #000000;
     display: flex;
@@ -221,7 +221,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     box-shadow: 0px -3px 1px 0px rgba(57, 61, 63, 0.8);
     margin-top: 25px;
 }
@@ -336,7 +336,7 @@ auto left/right margins to centre the content.*/
 
 /*out-the-box section on the index page, set a shaddow at the base to create a pop out effect*/
 .out-the-box {
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -379,7 +379,7 @@ will stack on top of each other instead of putting them into a row, creating the
     flex-wrap: wrap;
     flex-direction: column;
     box-shadow: 3px 3px 5px #FFFFFF inset, 5px 5px 10px 5px #393D3F;
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     width: 20%;
     height: auto;
     align-content: center;
@@ -425,7 +425,7 @@ will stack on top of each other instead of putting them into a row, creating the
     flex-wrap: wrap;
     flex-direction: column;
     box-shadow: 5px 5px 10px #C9F0FF inset, 5px 5px 10px 5px #393D3F;
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     height: auto;
     align-content: center;
     justify-content: center;
@@ -451,7 +451,7 @@ will stack on top of each other instead of putting them into a row, creating the
 /*about.html*/
 .about-box {
     width: 80%;
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     color: #C9F0FF;
     border-radius: 25px;
     margin: 3% auto;
@@ -470,7 +470,7 @@ will stack on top of each other instead of putting them into a row, creating the
 
     justify-content: flex-start;
     width: 20%;
-    height: auto;
+    height: 20%;
 }
 
 .about-box-header h1 {
@@ -507,7 +507,7 @@ will stack on top of each other instead of putting them into a row, creating the
 .contact-form-container,
 .contact-details-container {
     width: 80%;
-    background-color: #2D8A60;
+    background-color: #1D5D40;
     border-radius: 25px;
     margin: 3% auto;
     box-shadow: 5px 5px 10px #C9F0FF inset, 5px 5px 10px #393D3F;
@@ -692,6 +692,7 @@ will stack on top of each other instead of putting them into a row, creating the
 
     .about-box-header img {
         width: 50%;
+        height: auto;
         margin-left: auto;
         margin-right: auto;
     }
@@ -749,7 +750,7 @@ will stack on top of each other instead of putting them into a row, creating the
     .header-logo {
 
         height: 75px;
-        width: auto;
+        width: 75px;
         min-height: 1px;
         min-width: 1px;
     }
@@ -770,7 +771,7 @@ will stack on top of each other instead of putting them into a row, creating the
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        background-color: #2D8A60;
+        background-color: #1D5D40;
         width: 100%;
         top: 75px;
         z-index: 100;
@@ -785,7 +786,7 @@ will stack on top of each other instead of putting them into a row, creating the
 
     .burger-btn:checked~ul li {
         position: relative;
-        background: #2D8A60;
+        background: #1D5D40;
         width: 25%;
         height: auto;
         position: relative;
